WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120157
MathML: ASSERTION FAILED: !isPreferredLogicalHeightDirty() in RenderMathMLBlock::preferredLogicalHeight() const
https://bugs.webkit.org/show_bug.cgi?id=120157
Summary
MathML: ASSERTION FAILED: !isPreferredLogicalHeightDirty() in RenderMathMLBlo...
alan
Reported
2013-08-22 05:57:10 PDT
ssia
Attachments
Patch
(7.95 KB, patch)
2013-08-22 06:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-08-22 05:57:30 PDT
<
rdar://problem/14703058
>
alan
Comment 2
2013-08-22 06:09:46 PDT
Created
attachment 209353
[details]
Patch
Antti Koivisto
Comment 3
2013-08-22 06:15:54 PDT
Comment on
attachment 209353
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2013-08-23 00:18:13 PDT
Comment on
attachment 209353
[details]
Patch Clearing flags on attachment: 209353 Committed
r154475
: <
http://trac.webkit.org/changeset/154475
>
WebKit Commit Bot
Comment 5
2013-08-23 00:18:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug