Source/WebCore/rendering/RenderListItem.cpp
@@ -268,38 +268,36 @@ static RenderObject* firstNonMarkerChild(RenderObject* parent)
     return result;
 }
 
-void RenderListItem::updateMarkerLocation()
+void RenderListItem::insertOrMoveMarkerRendererIfNeeded()
 {
     // Sanity check the location of our marker.
-    if (m_marker) {
-        RenderObject* markerPar = m_marker->parent();
-        RenderObject* lineBoxParent = getParentOfFirstLineBox(this, m_marker);
-        if (!lineBoxParent) {
-            // If the marker is currently contained inside an anonymous box,
-            // then we are the only item in that anonymous box (since no line box
-            // parent was found).  It's ok to just leave the marker where it is
-            // in this case.
-            if (markerPar && markerPar->isAnonymousBlock())
-                lineBoxParent = markerPar;
-            else
-                lineBoxParent = this;
-        }
+    if (!m_marker)
+        return;
 
-        if (markerPar != lineBoxParent || m_marker->preferredLogicalWidthsDirty()) {
-            // Removing and adding the marker can trigger repainting in
-            // containers other than ourselves, so we need to disable LayoutState.
-            LayoutStateDisabler layoutStateDisabler(view());
-            updateFirstLetter();
-            m_marker->remove();
-            if (!lineBoxParent)
-                lineBoxParent = this;
-            lineBoxParent->addChild(m_marker, firstNonMarkerChild(lineBoxParent));
-            m_marker->updateMarginsAndContent();
-            // If markerPar is an anonymous block that has lost all its children, destroy it.
-            if (markerPar && markerPar->isAnonymousBlock() && !markerPar->firstChild() && !toRenderBlock(markerPar)->continuation())
-                markerPar->destroy();
-        }
+    RenderObject* currentParent = m_marker->parent();
+    RenderObject* newParent = getParentOfFirstLineBox(this, m_marker);
+    if (!newParent) {
+        // If the marker is currently contained inside an anonymous box,
+        // then we are the only item in that anonymous box (since no line box
+        // parent was found). It's ok to just leave the marker where it is
+        // in this case.
+        if (currentParent && currentParent->isAnonymousBlock())
+            return;
+        newParent = this;
     }
+
+    if (newParent != currentParent) {
+        // Removing and adding the marker can trigger repainting in
+        // containers other than ourselves, so we need to disable LayoutState.
+        LayoutStateDisabler layoutStateDisabler(view());
+        m_marker->remove();
+        newParent->addChild(m_marker, firstNonMarkerChild(newParent));
+        m_marker->updateMarginsAndContent();
+        // If current parent is an anonymous block that has lost all its children, destroy it.
+        if (currentParent && currentParent->isAnonymousBlock() && !currentParent->firstChild() && !toRenderBlock(currentParent)->continuation())
+            currentParent->destroy();
+    }
+
 }
 
 void RenderListItem::layout()
@@ -307,7 +305,7 @@ void RenderListItem::layout()
     StackStats::LayoutCheckPoint layoutCheckPoint;
     ASSERT(needsLayout()); 
 
-    updateMarkerLocation();    
+    insertOrMoveMarkerRendererIfNeeded();
     RenderBlock::layout();
 }
 
@@ -315,6 +313,19 @@ void RenderListItem::addOverflowFromChildren()
 {
     RenderBlock::addOverflowFromChildren();
     positionListMarker();
+}
+
+void RenderListItem::computePreferredLogicalWidths()
+{
+#ifndef NDEBUG
+    // FIXME: We shouldn't be modifying the tree in computePreferredLogicalWidths.
+    // Instead, we should insert the marker soon after the tree construction.
+    // This is similar case to RenderCounter::computePreferredLogicalWidths()
+    // See https://bugs.webkit.org/show_bug.cgi?id=104829
+    SetLayoutNeededForbiddenScope layoutForbiddenScope(this, false);
+#endif
+    insertOrMoveMarkerRendererIfNeeded();
+    RenderBlock::computePreferredLogicalWidths();
 }
 
 void RenderListItem::positionListMarker()
